force-app/main/default/objects/Booking_Unit__c/fields/Account_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Payment_Type__c</fullName>
    <label>Account Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>PHPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>