force-app/main/default/objects/Booking_Unit__c/fields/Admin_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Admin_Review_Status__c</fullName>
    <label>Admin Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Notified to Sales Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>