force-app/main/default/objects/Booking_Unit__c/fields/Amount_in_Words__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Words__c</fullName>
    <label>Amount in Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>