force-app/main/default/objects/Booking_Unit__c/fields/Anticipated_handover_date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_handover_date__c</fullName>
    <label>Anticipated handover date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>