force-app/main/default/objects/Booking_Unit__c/fields/Application_Form_Formula_2__c.field-meta.xml
<CustomField>
    <fullName>Application_Form_Formula_2__c</fullName>
    <formula>&quot;&amp;queryid=[INS]a045q000001ILyQ?pv0={QVar0}&quot;+
&quot;,[oqd]a045q000001ILyV?pv0={QVar0}&quot;+
&quot;,[DLD]a045q000001ILyk?pv0={QVar0}&quot;+
&quot;,[PID]a045q000001ILyf?pv0={QVar0}&quot;+
&quot;,[OQDAR]a04TX000000HjiH?pv0={QVar0}&quot;+
&quot;,[IDAR]a04TX000000Hjn7?pv0={QVar0}&quot;+
&quot;,[NIN]a04TX0000034Fd5?pv0={QVar0}&quot;+
&quot;,[IN]a04TX0000033RJh?pv0={QVar0}&quot;+
&quot;,[DL]a04TX00000AWvK2YAL?pv0={QVar0}&quot;+
&quot;,[OQ]a04TX00000AX0czYAD?pv0={QVar0}&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application_Form_Formula_2</label>
    <type>Text</type>
</CustomField>