force-app/main/default/objects/Booking_Unit__c/fields/Appointment_Invitation_URL__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Invitation_URL__c</fullName>
    <label>Appointment Invitation URL</label>
    <type>Url</type>
</CustomField>