force-app/main/default/objects/Booking_Unit__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <type>TextArea</type>
</CustomField>