force-app/main/default/objects/Booking_Unit__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending with Contracts</fullName>
            </value>
            <value>
                <fullName>Pending with Inventory</fullName>
            </value>
            <value>
                <fullName>Rejected By Contracts</fullName>
            </value>
            <value>
                <fullName>Rejected By Inventory</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending with BD</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>