force-app/main/default/objects/Booking_Unit__c/fields/Bank_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Bank_IBAN__c</fullName>
    <formula>Inventory__r.Property_Inv__r.Bank_IBAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank IBAN</label>
    <type>Text</type>
</CustomField>