force-app/main/default/objects/Booking_Unit__c/fields/Bank_Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Swift_Code__c</fullName>
    <formula>Inventory__r.Property_Inv__r.BANK_SWIFT_CODE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Swift Code</label>
    <type>Text</type>
</CustomField>