force-app/main/default/objects/Booking_Unit__c/fields/BDYearAr__c.field-meta.xml
<CustomField>
    <fullName>BDYearAr__c</fullName>
    <description>To populate the Arabic Year value from the Booking Date</description>
    <label>BDYearAr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>