force-app/main/default/objects/Booking_Unit__c/fields/BDYearEng__c.field-meta.xml
<CustomField>
    <fullName>BDYearEng__c</fullName>
    <description>To Populate the Booking date from Opportunity and from here updating the arabic values</description>
    <label>BDYearEng</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>