force-app/main/default/objects/Booking_Unit__c/fields/Booked_to_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Booked_to_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booked to Cancel</label>
    <type>Checkbox</type>
</CustomField>