force-app/main/default/objects/Booking_Unit__c/fields/Booking_Cheque_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cheque_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is integrated with Yardi</inlineHelpText>
    <label>Booking Cheque Cleared(DO NOT USE)</label>
    <type>Checkbox</type>
</CustomField>