force-app/main/default/objects/Booking_Unit__c/fields/Booking_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_Manager_ID__c</fullName>
    <description>18 Digit Manager ID on Booking for the Power BI report</description>
    <label>Booking Manager ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>