force-app/main/default/objects/Booking_Unit__c/fields/Booking_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Booking_Unit_Price__c</fullName>
    <label>Booking Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>