force-app/main/default/objects/Booking_Unit__c/fields/Booking_Unit_Price_AED_Report__c.field-meta.xml
<CustomField>
    <fullName>Booking_Unit_Price_AED_Report__c</fullName>
    <description>IF(LEN(TEXT(Booking_Unit_Price__c)) &gt;= 7,
TEXT(Booking_Unit_Price__c/1000000)+&apos;M&apos;,
IF(LEN(TEXT(Booking_Unit_Price__c)) &gt;= 4,
TEXT(Booking_Unit_Price__c/1000)+&apos;K&apos;,TEXT(Booking_Unit_Price__c)))</description>
    <formula>Booking_Unit_Price__c/1000000</formula>
    <label>Booking Unit Price (AED)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>