force-app/main/default/objects/Booking_Unit__c/fields/Booking_Unit_Price_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Booking_Unit_Price_Arabic__c</fullName>
    <label>Booking Unit Price (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>