force-app/main/default/objects/Booking_Unit__c/fields/Booking_Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Unit_Status__c</fullName>
    <label>Booking Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>EOI Generated</fullName>
            </value>
            <value>
                <fullName>Resold</fullName>
            </value>
            <value>
                <fullName>Resale in Progress</fullName>
            </value>
            <value>
                <fullName>Cancellation in Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>