force-app/main/default/objects/Booking_Unit__c/fields/BookingParent__c.field-meta.xml
<CustomField>
    <fullName>BookingParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BookingParent</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Booking Units (BookingParent)</relationshipLabel>
    <relationshipName>Booking_Units1</relationshipName>
    <type>Lookup</type>
</CustomField>