force-app/main/default/objects/Booking_Unit__c/fields/Broker_Com__c.field-meta.xml
<CustomField>
    <fullName>Broker_Com__c</fullName>
    <description>This field populated when booking unit status become SOLD.</description>
    <inlineHelpText>This field used to send data to Yardi</inlineHelpText>
    <label>Broker Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>