force-app/main/default/objects/Booking_Unit__c/fields/Building_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Building_Name_Arabic__c</fullName>
    <formula>Inventory__r.Property_Inv__r.Building_Name_Arabic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Name Arabic</label>
    <type>Text</type>
</CustomField>