force-app/main/default/objects/Booking_Unit__c/fields/Call_Out_Success__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Out Success</label>
    <type>Checkbox</type>
</CustomField>