force-app/main/default/objects/Booking_Unit__c/fields/Cancelled_Relocated__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Relocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled_Relocated</label>
    <type>Checkbox</type>
</CustomField>