force-app/main/default/objects/Booking_Unit__c/fields/ComDLDIntSt__c.field-meta.xml
<CustomField>
    <fullName>ComDLDIntSt__c</fullName>
    <label>Comm &amp; DLD Interface Status</label>
    <type>TextArea</type>
</CustomField>