force-app/main/default/objects/Booking_Unit__c/fields/CommDLDInt__c.field-meta.xml
<CustomField>
    <fullName>CommDLDInt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comm &amp; DLD Interfaced</label>
    <type>Checkbox</type>
</CustomField>