force-app/main/default/objects/Booking_Unit__c/fields/Create_Incentive_SR__c.field-meta.xml
<CustomField>
    <fullName>Create_Incentive_SR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field updated by Opportunity trigger when campaign criteria met</description>
    <label>Create Incentive SR</label>
    <type>Checkbox</type>
</CustomField>