force-app/main/default/objects/Booking_Unit__c/fields/Create_Partial_SR__c.field-meta.xml
<CustomField>
    <fullName>Create_Partial_SR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Partial SR</label>
    <type>Checkbox</type>
</CustomField>