force-app/main/default/objects/Booking_Unit__c/fields/Deal_Expired__c.field-meta.xml
<CustomField>
    <fullName>Deal_Expired__c</fullName>
    <description>AND(
NOT( ISNULL( Lock_Till__c ) ),
Lock_Till__c &lt; NOW())</description>
    <formula>AND(
NOT( ISNULL( Lock_Till__c ) ),
Lock_Till__c &lt; NOW(),Token_BU__c == null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Expired</label>
    <type>Checkbox</type>
</CustomField>