force-app/main/default/objects/Booking_Unit__c/fields/DLD_Waiver_Amount__c.field-meta.xml
<CustomField>
    <fullName>DLD_Waiver_Amount__c</fullName>
    <description>if(NOT( ISNULL(Inventory__r.Actual_DLD_Value__c)) , Inventory__r.Actual_DLD_Value__c,0)
if(AND(NOT( ISNULL(Inventory__r.Actual_DLD_Value__c)), Project_Name__c != &apos;Madinat Jumeirah Living&apos;) , Inventory__r.Actual_DLD_Value__c,0)</description>
    <formula>if(NOT( ISNULL(Inventory__r.Actual_DLD_Value__c)),Inventory__r.Actual_DLD_Value__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD Waiver Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>