force-app/main/default/objects/Booking_Unit__c/fields/DocVerified__c.field-meta.xml
<CustomField>
    <fullName>DocVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Signed and Verified</label>
    <type>Checkbox</type>
</CustomField>