force-app/main/default/objects/Booking_Unit__c/fields/Doubtful_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Doubtful_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doubtful Conversion</label>
    <type>Checkbox</type>
</CustomField>