force-app/main/default/objects/Booking_Unit__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Yardi INT Response(PP)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>