force-app/main/default/objects/Booking_Unit__c/fields/Escrow_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Account_Name__c</fullName>
    <formula>Inventory__r.Property_Inv__r.Escrow_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrow Account Name</label>
    <type>Text</type>
</CustomField>