force-app/main/default/objects/Booking_Unit__c/fields/Exclude_DLD_Interface_to_Fusion__c.field-meta.xml
<CustomField>
    <fullName>Exclude_DLD_Interface_to_Fusion__c</fullName>
    <formula>IF((RecordType.Name =&apos;Booking Unit Read Only&apos;),Inventory__r.Property_Inv__r.Exclude_DLD_Interface_to_Fusion__c,
IF((RecordType.Name =&apos;Land&apos;),Inventory__r.Project_Inv__r.Exclude_DLD_Interface_to_Fusion__c,
false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude DLD Interface to Fusion</label>
    <type>Checkbox</type>
</CustomField>