force-app/main/default/objects/Booking_Unit__c/fields/Finish_Type__c.field-meta.xml
<CustomField>
    <fullName>Finish_Type__c</fullName>
    <description>Formula field used in Finish option Report</description>
    <formula>IF(ISPICKVAL(Finishing__c, &apos;Light Option&apos;) , &apos;Default Option&apos;, 
IF(AND(ISPICKVAL(Finishing__c,&apos;Option 3&apos;),Inventory__r.Project_Name__c=&apos;Serena&apos;),&apos;Default Option&apos;,
IF(AND(Property_Name__c=&apos;Mudon M - Arabella III&apos;,ISPICKVAL(Finishing__c, &apos;Option 1&apos;)), &apos;Default Option&apos;,  
IF(AND(Property_Name__c=&apos;Mudon Views – Tower 4&apos;,ISPICKVAL(Finishing__c, &apos;Option 2&apos;)), &apos;Default Option&apos;, &apos;&apos;) ) ) )</formula>
    <label>Finish Type</label>
    <type>Text</type>
</CustomField>