force-app/main/default/objects/Booking_Unit__c/fields/Finishing__c.field-meta.xml
<CustomField>
    <fullName>Finishing__c</fullName>
    <label>Finishing Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
            <value>
                <fullName>Option 3</fullName>
            </value>
            <value>
                <fullName>Light Option</fullName>
            </value>
            <value>
                <fullName>Dark Option</fullName>
            </value>
            <value>
                <fullName>No Option chosen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>