force-app/main/default/objects/Booking_Unit__c/fields/FinishingOption__c.field-meta.xml
<CustomField>
    <fullName>FinishingOption__c</fullName>
    <label>Color Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default Option</fullName>
            </value>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
            <value>
                <fullName>Option A</fullName>
            </value>
            <value>
                <fullName>Option B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>