force-app/main/default/objects/Booking_Unit__c/fields/Generate_Application_Form__c.field-meta.xml
<CustomField>
    <fullName>Generate_Application_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Application Form</label>
    <type>Checkbox</type>
</CustomField>