force-app/main/default/objects/Booking_Unit__c/fields/Handover_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Handover_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handover Case Created</label>
    <type>Checkbox</type>
</CustomField>