force-app/main/default/objects/Booking_Unit__c/fields/Handover_Percentage_1__c.field-meta.xml
<CustomField>
    <fullName>Handover_Percentage_1__c</fullName>
    <description>New field to capture the percentage by workflow update - Field update</description>
    <label>Handover Percentage 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>