force-app/main/default/objects/Booking_Unit__c/fields/Handover_Percentage_Arabic_1__c.field-meta.xml
<CustomField>
    <fullName>Handover_Percentage_Arabic_1__c</fullName>
    <label>Handover Percentage Arabic 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>