force-app/main/default/objects/Booking_Unit__c/fields/HandoverCompleted_Date__c.field-meta.xml
<CustomField>
    <fullName>HandoverCompleted_Date__c</fullName>
    <formula>Inventory__r.Handover_Completed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handover Completed Date</label>
    <type>Date</type>
</CustomField>