force-app/main/default/objects/Booking_Unit__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Booking Units</relationshipLabel>
    <relationshipName>Booking_Units</relationshipName>
    <type>Lookup</type>
</CustomField>