force-app/main/default/objects/Booking_Unit__c/fields/Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Status__c</fullName>
    <formula>TEXT(Inventory__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Status</label>
    <type>Text</type>
</CustomField>