force-app/main/default/objects/Booking_Unit__c/fields/Is_BTS__c.field-meta.xml
<CustomField>
    <fullName>Is_BTS__c</fullName>
    <description>Booking__r.Is_BTS__c - old formula</description>
    <formula>if(Inventory__r.RecordType.Name == &apos;Unit&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is BTS?</label>
    <type>Checkbox</type>
</CustomField>