force-app/main/default/objects/Booking_Unit__c/fields/Is_Land__c.field-meta.xml
<CustomField>
    <fullName>Is_Land__c</fullName>
    <description>old - Booking__r.Is_Land__c</description>
    <formula>if(Inventory__r.RecordType.Name == &apos;Plot(Land)&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Land?</label>
    <type>Checkbox</type>
</CustomField>