force-app/main/default/objects/Booking_Unit__c/fields/isBookedToCancel__c.field-meta.xml
<CustomField>
    <fullName>isBookedToCancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBookedToCancel</label>
    <type>Checkbox</type>
</CustomField>