force-app/main/default/objects/Booking_Unit__c/fields/Lock_Till__c.field-meta.xml
<CustomField>
    <fullName>Lock_Till__c</fullName>
    <label>Lock Till</label>
    <type>DateTime</type>
</CustomField>