force-app/main/default/objects/Booking_Unit__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <formula>Inventory__r.Logo_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo URL</label>
    <type>Text</type>
</CustomField>