force-app/main/default/objects/Booking_Unit__c/fields/Manager_on_Booking__c.field-meta.xml
<CustomField>
    <fullName>Manager_on_Booking__c</fullName>
    <description>This field is used to get the Manager Name on booking the unit.</description>
    <label>Manager on  Booking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>