force-app/main/default/objects/Booking_Unit__c/fields/Master_Community__c.field-meta.xml
<CustomField>
    <fullName>Master_Community__c</fullName>
    <description>Inventory__r.Property_Inv__r.Master_Community__c</description>
    <formula>if(Inventory__r.RecordType.Name = &apos;Unit&apos;,Inventory__r.Property_Inv__r.Master_Community__c,Inventory__r.Project_Inv__r.Master_Community__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Community</label>
    <type>Text</type>
</CustomField>