force-app/main/default/objects/Booking_Unit__c/fields/Master_Community_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Master_Community_Arabic__c</fullName>
    <formula>Inventory__r.Property_Inv__r.Master_Community_Arabic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Community (Arabic)</label>
    <type>Text</type>
</CustomField>