force-app/main/default/objects/Booking_Unit__c/fields/Master_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Developer_Name__c</fullName>
    <formula>Inventory__r.BTS_MASTER_DEVELOPER_NAME__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Developer Name</label>
    <type>Text</type>
</CustomField>