force-app/main/default/objects/Booking_Unit__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Opportunity since Booking Unit is Junction object</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Booking Units</relationshipLabel>
    <relationshipName>Booking_Units</relationshipName>
    <type>Lookup</type>
</CustomField>