force-app/main/default/objects/Booking_Unit__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>New Field for Meraas Migration</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Launch Sales</fullName>
            </value>
            <value>
                <fullName>Tempo Sales</fullName>
            </value>
            <value>
                <fullName>Merging</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Consolidation</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>