force-app/main/default/objects/Booking_Unit__c/fields/Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager__c</fullName>
    <description>+ &quot; &quot; + Owner:User.ManagerId</description>
    <formula>Owner:User.Manager.FirstName + &quot; &quot; +Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager</label>
    <type>Text</type>
</CustomField>