force-app/main/default/objects/Booking_Unit__c/fields/Owner_Manager_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_s_Email__c</fullName>
    <label>Owner Manager&apos;s Email</label>
    <type>Email</type>
</CustomField>