force-app/main/default/objects/Booking_Unit__c/fields/Permitted_Use__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Use__c</fullName>
    <formula>Inventory__r.Property_Inv__r.Permitted_Use__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permitted Use`</label>
    <type>Text</type>
</CustomField>