force-app/main/default/objects/Booking_Unit__c/fields/Project_Name_Report__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Report__c</fullName>
    <formula>IF(RecordType.Name != &apos;Land&apos;,IF(NOT(ISBLANK(Inventory__r.Property_Inv__r.Project_Name_Report__c)), Inventory__r.Property_Inv__r.Project_Name_Report__c,Inventory__r.Project_Inv__r.Name),Inventory__r.Project_Inv__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name Report</label>
    <type>Text</type>
</CustomField>