force-app/main/default/objects/Booking_Unit__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <formula>Inventory__r.Property_Inv__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property</label>
    <type>Text</type>
</CustomField>