force-app/main/default/objects/Booking_Unit__c/fields/Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Code__c</fullName>
    <formula>Inventory__r.PropertyCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Code</label>
    <type>Text</type>
</CustomField>