force-app/main/default/objects/Booking_Unit__c/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <formula>CASESAFEID(Inventory__r.Property_Inv__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property ID</label>
    <type>Text</type>
</CustomField>