force-app/main/default/objects/Booking_Unit__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>Inventory__r.Property_Name__c</description>
    <formula>Inventory__r.Property_Inv__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Name</label>
    <type>Text</type>
</CustomField>