force-app/main/default/objects/Booking_Unit__c/fields/Property_Name_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Property_Name_in_Arabic__c</fullName>
    <formula>Inventory__r.Property_Inv__r.Property_Name_in_Arabic__c</formula>
    <label>Property Name in Arabic</label>
    <type>Text</type>
</CustomField>