force-app/main/default/objects/Booking_Unit__c/fields/Property_or_Project__c.field-meta.xml
<CustomField>
    <fullName>Property_or_Project__c</fullName>
    <formula>IF(   Inventory__r.RecordType.Name =&quot;Unit&quot;, Inventory__r.Property_Inv__r.Name ,Inventory__r.Project_Inv__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property or Project</label>
    <type>Text</type>
</CustomField>