force-app/main/default/objects/Booking_Unit__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <formula>Inventory__r.Property_Inv__r.Type_of_Property__c</formula>
    <label>Property Type</label>
    <type>Text</type>
</CustomField>