force-app/main/default/objects/Booking_Unit__c/fields/Property_x_Value_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Property_x_Value_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is integrated with Yardi</inlineHelpText>
    <label>Property x Value Cleared(DO NOT USE)</label>
    <type>Checkbox</type>
</CustomField>