force-app/main/default/objects/Booking_Unit__c/fields/Release_Request_Comments__c.field-meta.xml
<CustomField>
    <fullName>Release_Request_Comments__c</fullName>
    <label>Release Request Comments</label>
    <type>TextArea</type>
</CustomField>