force-app/main/default/objects/Booking_Unit__c/fields/Relocated_To__c.field-meta.xml
<CustomField>
    <fullName>Relocated_To__c</fullName>
    <label>Relocated To</label>
    <length>200</length>
    <type>Text</type>
</CustomField>