force-app/main/default/objects/Booking_Unit__c/fields/Relocation__c.field-meta.xml
<CustomField>
    <fullName>Relocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relocation</label>
    <type>Checkbox</type>
</CustomField>