force-app/main/default/objects/Booking_Unit__c/fields/Reporting_Entity__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Entity__c</fullName>
    <description>We can use this field in all Booking unit object related reports to get the property reporting entity details</description>
    <formula>TEXT(Inventory__r.Property_Inv__r.Reporting_Entity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Entity</label>
    <type>Text</type>
</CustomField>