force-app/main/default/objects/Booking_Unit__c/fields/Resale__c.field-meta.xml
<CustomField>
    <fullName>Resale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to keep the detail of Resale</description>
    <label>Resale</label>
    <type>Checkbox</type>
</CustomField>