force-app/main/default/objects/Booking_Unit__c/fields/Reserved_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Date_Only__c</fullName>
    <description>This field is created for the Audit report - Dp Master Sales Report to show date only values</description>
    <formula>DATEVALUE( Reserved_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reserved Date</label>
    <type>Date</type>
</CustomField>